edit index.html, recipes/macaroni.html

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Chicken Macaroni Salad</h1>
-    <img src="/" width="300" alt="Chicken Macaroni Salad" />
+    <img src="../images/macaroni.jpg" width="250" alt="Chicken Macaroni Salad" />
 
     <h4>Description</h4>
-    <p>Yummy Macaroni Salad that will surely satisfy your palette.</p>
+    <p>A taste of Macaroni Salad that will surely satisfy your palette.</p>
+    <p>This yummy treat is always present at any occassion and is one of my favorites.</p>
     <p>By <strong>Elleb</strong></p>
 
     <h4>Ingredients</h4>
@@ -26,7 +27,6 @@
       <li>Read and green Kaong, drained</li>
       <li>Boiled chicken fillet</li>
     </ul>
-
     <h4>Procedure</h4>
     <ol>
       <li>Boil the macaroni pasta. Just follow the packaging instruction.</li>
