--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/macaroni.html">Macaroni Salad</a>
+ <li>   <a href="recipes/macaroni.html">Macaroni Salad</a> </li> 
+    <br>
+    <ul>
+ <li>  <a href="recipes/spaghetti.html">Sweet Spaghetti</a> </li> 
     
+</ul>
+   
 </body>
 </html>
