--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Sweet Spaghetti</h1>
-    <img src="" alt="Spaghetti" />
+    <img src="../images/spaghetti.jpg" width="250" alt="Spaghetti" />
     <h4>Description</h4>
     <p>Many people loves to eat pasta and I am one of them.</p>
     <p>
