Added images and edited the recipes files.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul> 
  <li>   <a href="recipes/macaroni.html">Macaroni Salad</a> </li> 
-    <br>
-    <ul>
  <li>  <a href="recipes/spaghetti.html">Sweet Spaghetti</a> </li> 
+ <li> <a href="recipes/fruitsalad.html">Fruit Salad</a></li>
     
 </ul>
    
