--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -37,5 +37,10 @@
       <li>After some time, when it is cold, you can now eat and enjoy your yummy macaroni salad. </li>
     </ol>
     <p>Enjoy and satisfy that pallete!</p>
+
+    <a href="../index.html">Back to main</a>
+<br>
+<a href="macaroni.html">Back on top</a>
+    
   </body>
 </html>
