--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Sweet Spaghetti</h1>
-    <img src="../images/spaghetti.jpg" width="250" alt="Spaghetti" />
+    <img src="../images/spaghetti.png" width="250" alt="Spaghetti" />
     <h4>Description</h4>
     <p>Many people loves to eat pasta and I am one of them.</p>
     <p>
@@ -53,9 +53,14 @@
         <li>It depends on your preference, you can now mix the spaghetti altogether into sauce and topped 
             it with the grated cheddar cheese.</li>
         <li>Or, you can set it separately, take some spaghetti pasta, mix some spaghetti sauce, and topped 
-            it with the grated cheddar cheese. Either way you like.</li>
-        <li>And viola! Here comes your sweetened spaghetti. Yummy!</li>
+            it with the grated cheddar or parmessan cheese. Either way you like.</li>     
     </ol>
+
+    <p>And viola! Here comes your sweetened spaghetti. Yummy!<p/>
+
+    <a href="../index.html">Back to main</a>
+   <br>
+    <a href="spaghetti.html">Back on top</a>
 
 
   </body>
