At last, everything is done as intended

--- a/recipes/fruitsalad.html
+++ b/recipes/fruitsalad.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Fruit Salad </h1>
-    <img src="../images/fruitsalad.png" alt="Fruit Salad">
+    <img src="../images/fruitsalad.jpg" alt="Fruit Salad">
     <h4>Desription</h4>
     <p>This sweet treat is mouth watering. </p>
     <p>Surely you would love this.</p>
