Added the Next function

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -39,8 +39,11 @@
     <p>Enjoy and satisfy that pallete!</p>
 
     <a href="../index.html">Back to main</a>
-<br>
-<a href="macaroni.html">Back on top</a>
+   <br>
+    <a href="macaroni.html">Back on top</a>
+    <br>
+    <a href="spaghetti.html">Next</a>
+
     
   </body>
 </html>
