--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -61,6 +61,8 @@
     <a href="../index.html">Back to main</a>
    <br>
     <a href="spaghetti.html">Back on top</a>
+    <br>
+    <a href="fruitsalad.html">Next</a>
 
 
   </body>
