Added some styling to the index.html file

--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
+   <header>
     <h1>Odin Recipes</h1>
+    <hr>
+</header>
+
     <ul> 
- <li>   <a href="recipes/macaroni.html">Macaroni Salad</a> </li> 
- <li>  <a href="recipes/spaghetti.html">Sweet Spaghetti</a> </li> 
- <li> <a href="recipes/fruitsalad.html">Fruit Salad</a></li>
+        <img src="images/macaroni.jpg" alt="" width="200">
+      <li> <a href="recipes/macaroni.html">Macaroni Salad</a> </li> 
+      
+         <img src="images/spaghetti.jpg" alt="" width="200">
+      <li> <a href="recipes/spaghetti.html">Sweet Spaghetti</a> </li> 
+
+         <img src="images/fruitsalad.jpg" alt="" width="200">
+      <li> <a href="recipes/fruitsalad.html">Fruit Salad</a></li>
     
 </ul>
+
    
 </body>
 </html>
