--- a/recipes/fruitsalad.html
+++ b/recipes/fruitsalad.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Fruit Salad </h1>
+    <!--HEADER-->
+    <header> 
+    <h1 class="site-name">Odin Recipes</h1>
+    <hr>
+</header>
+    <!--RECIPE NAME-->
+    <h1 class="recipe-name">Fruit Salad </h1>
     <img src="../images/fruitsalad.jpg" alt="Fruit Salad">
     <h4>Desription</h4>
     <p>This sweet treat is mouth watering. </p>
