--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="recipes.css">
     <title>Odin Recipes</title>
   </head>
 
   <body>
-    <h1>Sweet Spaghetti</h1>
+    <header>
+    <h1 class="site-name">Odin Recipes</h1>
+    <hr>
+</header>
+
+    <h1 class="recipe-name">Sweet Spaghetti</h1>
     <img src="../images/spaghetti.jpg" width="250" alt="Spaghetti" />
     <h4>Description</h4>
     <p>Many people loves to eat pasta and I am one of them.</p>
