Modified the CSS application of all the recipe files.

--- a/recipes/fruitsalad.html
+++ b/recipes/fruitsalad.html
@@ -14,13 +14,17 @@
     <hr>
 </header>
     <!--RECIPE NAME-->
+    <div class="recipe">
     <h1 class="recipe-name">Fruit Salad </h1>
-    <img src="../images/fruitsalad.jpg" alt="Fruit Salad">
-    <h4>Desription</h4>
+    <img class="image" src="../images/fruitsalad.jpg" width="300" alt="Fruit Salad">
+</div>
+
+<div class="desc-container">
     <p>This sweet treat is mouth watering. </p>
     <p>Surely you would love this.</p>
-    <p>By <strong>Elleb</strong></p>
+    </div>
 
+    <div class="ings-container">
     <h4>Ingredients</h4>
 
     <ul>
@@ -35,7 +39,9 @@
         <li>1 cup green kaong</li>
         
     </ul>
+    </div>
 
+<div class="procedure-container">
     <h4>Procedure</h4>
 <ol>
 
@@ -43,13 +49,18 @@
     <li>Add the rest of the ingredients and give it a good toss until well-combined. </li>
             <li>Cover bowl with a cling wrap and chill for several hours before serving. May also be frozen. </li>    
 </ol>
+</div>
 
-<p>Yipee! Here's some yummy treats!</p>
+<h3>Yipee! Here's some yummy treats!</h3>
 
+<div class="pointer-link">
+    <a href="../index.html">Main</a> 
+     <a href="macaroni.html">Top</a> 
+    <a href="../index.html">Back</a> 
+    <a href="spaghetti.html">Next</a>   
+   </ul>
+ </div>
 
-<a href="../index.html">Back to main</a>
-<br>
-<a href="fruitsalad.html">Back on top</a>
     
 </body>
 </html>
