--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -10,20 +10,26 @@
 
   <body>
     <header>
-    <h1 class="site-name">Odin Recipes</h1>
+      <h1 class="site-name">Odin Recipes</h1>
     <hr>
-</header>
+    </header>
+ <div>
+     <!--RECIPE NAME-->
+     <div class="recipe">
+     <h1 class="recipe-name">Sweet Spaghetti</h1>
+    <img class="image" src="../images/spaghetti.jpg" width="300" alt="Spaghetti" />
+    
+    </div>
 
-    <h1 class="recipe-name">Sweet Spaghetti</h1>
-    <img src="../images/spaghetti.jpg" width="250" alt="Spaghetti" />
-    <h4>Description</h4>
+    <div class="desc-container">
     <p>Many people loves to eat pasta and I am one of them.</p>
     <p>
       This version of Spaghetti has a sweety taste which will truly feed your
       cravings.
     </p>
-    <p>By <strong>Elleb</strong></p>
+  </div>
 
+<div class="ings-container">
     <h4>Ingredients</h4>
 
     <ul>
@@ -36,20 +42,22 @@
         <li>Butter</li>
         <li>Sausage or hotdog slices</li>
         <li>Chopped onions and garlic</li>
-    </ul>  
+    </ul> 
+    </div> 
     
+    <div class="procedure-container">
     <h4>Procedure</h4>
 
     <ol>
         <li>Boil the spaghetti. Just follow the packaging instruction. Drain and set aside.</li>
-        <li>Marinate the ground pork or beef with a tablespoon of soy sauce, some ground <br>
-            black or white pepper, a tablespoon of corn starch-- this will soften the texture <br>
+        <li>Marinate the ground pork or beef with a tablespoon of soy sauce, some ground 
+            black or white pepper, a tablespoon of corn starch-- this will soften the texture 
             of the ground pork or beef when cooked. </li>
         <li>In a medium pan, melt a tablespoon of butter over low fire to avoid making it burned.</li>
         <li>Sautee the chopped garlic and onions until aromatic.</li>
         <li>Add the ground pork of beef, mix well and let it be sauteed for a while. </li>
         <li>Add the mushroom slices, mix well and sautee more minutes. </li>
-        <li>Then add some water and let the mixture boil for more minutes. u</li>
+        <li>Then add some water and let the mixture boil for more minutes.</li>
         <li>Add the tomato sauce, mix well. Continue boiling over medium fire.</li>
         <li>Taste the sauce mixture, add some salt if necessary.</li>
         <li>Add the sausage or hotdog slices. Stir and mix well. Keep stay on fire  until 
@@ -61,15 +69,19 @@
         <li>Or, you can set it separately, take some spaghetti pasta, mix some spaghetti sauce, and topped 
             it with the grated cheddar or parmessan cheese. Either way you like.</li>     
     </ol>
+    </div>
 
-    <p>And viola! Here comes your sweetened spaghetti. Yummy!<p/>
+    <h3>And viola! Here comes your sweetened spaghetti. Yummy!</h3>
 
-    <a href="../index.html">Back to main</a>
-   <br>
-    <a href="spaghetti.html">Back on top</a>
-    <br>
-    <a href="fruitsalad.html">Next</a>
-
+    <div class="pointer-link">
+      <div class="pointer-link">
+        <a href="../index.html">Main</a> 
+         <a href="macaroni.html">Top</a> 
+        <a href="../index.html">Back</a> 
+        <a href="fruitsalad.html">Next</a>   
+       </ul>
+     </div>
+     </div>
 
   </body>
 </html>
